bdr.BDR.scala.error
Compilation error:
BDR:7: error: illegal start of simple expression
  } esle if (ind=='L') {
         ^